# project-knowledge-agent

./: .gitignore  LICENSE  README.md  SECURITY.md  env.example  pyproject.toml
src/: config  project_knowledge_agent.py
