[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-knowledge-agent"
version = "0.1.0"
description = "A stateful LLM-powered system for converting AI conversations into persistent project knowledge."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Yiyi Luo" }
]
dependencies = [
  "anthropic>=0.40.0",
  "python-dotenv>=1.0.0",
  "pypdf>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
